--- a/src/client/footer/footer.sass
+++ b/src/client/footer/footer.sass
@@ -2,7 +2,7 @@
 
 footer
   margin: 200px 0 0
-  padding: 50px 0
+  padding: 50px 0 200px
   background-color: $grey-1
   position: relative
   color: $blue-1
