hotels - change section with background and transparency

--- a/src/client/header/header.inline.sass
+++ b/src/client/header/header.inline.sass
@@ -1,5 +1,9 @@
 @import "../styles/common";
 
+@media screen and (max-width: 480px)
+  h1
+    font-size: 36px
+
 .lead
   font-family: ThirstyRoughLtTwo
   text-align: center
@@ -13,6 +17,7 @@ header
 h1
   margin: 0
   color: White
+  padding: 0 20px
   font-family: Veneer, Helvetica, sans-serif
   font-weight: normal
   font-size: 192px
